--- a/slides/index.adoc
+++ b/slides/index.adoc
@@ -5,28 +5,17 @@
 :deckjs_transition: horizontal-slide
 :source-highlighter: prettify
 :icons: font
-:split:
 :menu:
-:pom: ../pom.xml
-:sample-dir: ../src/main/java/sample
-:user-predicates: {sample-dir}/data/UserPredicates.java
-:test-sample-dir: ../src/test/java/test/sample
-:user-repository-test: {test-sample-dir}/data/UserRepositoryTest.java
-:jpa-message-repository: {sample-dir}/jpa/JpaMessageRepository.java
-:data-message-repository: {sample-dir}/data/MessageRepository.java
-:data-user-repository: {sample-dir}/data/UserRepository.java
 
 == About me
+
+image::images/spring-security31-book.jpg[role="thumb right"]
 
 * Open source fanatic
 * Spring Security and Spring LDAP Project Lead
 * Committer on Spring Framework
 * Co-author of Spring Security 3.1 book
 * Twitter @rob_winch
-
-+
-
-image::images/spring-security31-book.jpg[]
 
 == Agenda
 
@@ -47,17 +36,44 @@ image::images/spring-io.png[]
 * Portability
 
 == New in Spring Security 3.2
-
-* Servlet 3 and Servlet 3.1 integration
 * Concurrency Support
+* Servlet 3 and Servlet 3.1 integration
 * Spring MVC integration
 * CSRF protection
 * Security header integration
 * Java Configuration support
 
+[canvas-image="images/security-demo.png"]
 == Demo
 
-Demo Time!
+== CSRF Protection
+
+[source]
+----
+POST /sample/110 HTTP/1.1
+Host: localhost:8080
+Content-Type: application/x-www-form-urlencoded
+Cookie: JSESSIONID=8B00C27E0962E363CBAC814F19E51C1D
+
+_method=delete&_csrf=7d281f9f-55d9-4663-88f8-42827f3d2c12
+----
+
+== Security HTTP Response Headers
+
+[source]
+----
+HTTP/1.1 200 OK
+X-Content-Type-Options: nosniff
+X-XSS-Protection: 1; mode=block
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Pragma: no-cache
+Expires: 0
+X-Frame-Options: DENY
+Strict-Transport-Security: max-age=31536000 ; includeSubDomains
+----
+
+[canvas-image="images/security-demo.png"]
+== Demo
 
 == Learn More. Stay Connected.
 
